--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "redux": "^3.6.0"
   },
   "devDependencies": {
+    "prettier": "^1.15.3",
     "react-scripts": "0.9.5"
   },
   "scripts": {
@@ -18,5 +19,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "prettier": {
+    "semi": true,
+    "singleQuote": true
   }
 }
