--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "prettier": "^1.15.3",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "react-test-renderer": "15.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
